# nomadcoin-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  api.http  docker-compose.yaml
nomadcoin/: Cargo.toml
nomadcoin/src/: block.rs  blockchain.rs  db.rs  lib.rs
rest/: Cargo.toml  api.http
rest/src/: main.rs
src/: block.rs  blockchain.rs  error.rs  hashable.rs  lib.rs  main.rs  p2p.rs  repo.rs  test_utils.rs  testutils.rs  transaction.rs  utils.rs  wallet.rs
templates/: add.html.tera  home.html.tera  index.html.tera
templates/partials/: block.html.tera  footer.html.tera
web/: Cargo.toml
web/src/: main.rs
web/templates/partials/: head.html.tera  header.html.tera
