[package]
name = "nomadcoin-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nomadcoin"
path = "src/lib.rs"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
sha2 = "0.9.3"
serde = { version = "1.0.130", features = ["derive"] }
pickledb = "0.4.1"
chrono = "0.4.19"
p256 = "0.10.1"
rand_core = "0.6.3"
hex = "0.4.3"
reqwest = { version = "0.11", features = ["json"] }
reqwest-eventsource = "0.4.0"
futures = "0.3.5"
tokio = { version = "1.17.0", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
rand = "0.6.5"