[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
serde = "1.0.130"
nomadcoin = { path = "../nomadcoin" }

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]